--- a/assets/base.css
+++ b/assets/base.css
@@ -262,9 +262,24 @@ h5,
   font-style: var(--font-heading-style);
   font-weight: var(--font-heading-weight);
   letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
-  color: rgb(var(--color-foreground));
+  color: rgb(var(--color-button));
+  transition: color 0.2s ease;
   line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
   word-break: break-word;
+}
+
+h1:hover,
+h2:hover,
+h3:hover,
+h4:hover,
+h5:hover,
+.h0:hover,
+.h1:hover,
+.h2:hover,
+.h3:hover,
+.h4:hover,
+.h5:hover {
+  color: #FDC15F;
 }
 
 .hxxl {
