--- a/sections/gls-quote-contact.liquid
+++ b/sections/gls-quote-contact.liquid
@@ -16,12 +16,14 @@
       <div class="gls-contact-actions">
         {%- if section.settings.phone_number != blank -%}
           <a href="tel:{{ section.settings.phone_number }}" class="gls-btn gls-btn--outline">
-            {% render 'icon-phone' %} {{ section.settings.phone_number }}
+            <svg aria-hidden="true" focusable="false" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18.308 15.275l-2.308-2.308a1.923 1.923 0 00-2.721 0l-.577.577a29.043 29.043 0 01-6.247-6.246l.577-.577a1.923 1.923 0 000-2.721L4.724 1.692a1.923 1.923 0 00-2.721 0L1.1 2.595c-1.387 1.386-.578 5.062 2.379 8.02 2.957 2.957 6.634 3.766 8.02 2.38l.903-.904a1.923 1.923 0 000-2.721l2.185 2.184a1.923 1.923 0 002.721 0l.903-.903a1.923 1.923 0 000-2.721l.097-.097z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            {{ section.settings.phone_number }}
           </a>
         {%- endif -%}
         {%- if section.settings.email_address != blank -%}
           <a href="mailto:{{ section.settings.email_address }}" class="gls-btn gls-btn--outline">
-            {% render 'icon-mail' %} {{ section.settings.email_address }}
+            <svg aria-hidden="true" focusable="false" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="1" y="4" width="18" height="12" rx="2" stroke="currentColor" stroke-width="1.5"/><path d="M1 6l9 5 9-5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            {{ section.settings.email_address }}
           </a>
         {%- endif -%}
       </div>
